# glx

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
demonstration/: geometry.py  text.py
glx/: __init__.py  bounded_ortho_view.py  gl_importer.py  ortho_projection.py  ortho_view.py  tools.py  viewport.py  wrappers.py
glx/examples/: _example.py  text.py
glx/font/: __init__.py  atlas.py  code_lookup.py  display_list.py  font.py
glx/glsl_shaders/: basic.vert  text.frag  text.geom  text.vert
glx/shader_program/: __init__.py  attribute.py  bound_attribute.py  buffer_description.py  shader.py  shader_program.py  uniform_description.py  vertex_array.py
glx/shader_programs/: basic.py
glx/test/: test_spaces.py
glx/transformations/: test_transformations.py  transformations.py
glx/viewport/: __init__.py  bounded_ortho_view.py  ortho_projection.py  ortho_view.py  viewport.py
glx/viewport/test/: test_conversions.py
