[flake8]
max-line-length=79
ignore=I100, W503, E731, E741
exclude=__init__.py,.hg,__pycache__,backup,diagram_generator,tex_includes

[isort]
line_lenth=79
known_first_party=glx
known_third_party=moderngl
multi_line_output=0

[pycodestyle]
max-line-length=79
exclude=__init__.py,.hg,__pycache__,backup,diagram_generator,tex_includes

[pytest]
addopts=--doctest-modules
norecursedirs=.hg backup diagram_generator tex_includes

[metadata]
long_description = file: README.rst

[aliases]
test=pytest
